--- a/src/components/Grid/styles.scss
+++ b/src/components/Grid/styles.scss
@@ -8,3 +8,23 @@
   align-items: strech;
   flex: 0 0 50%;
 }
+
+:global {
+  .enter {
+    opacity: 0.01;
+  }
+
+  .enter.enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+  }
+
+  .leave {
+    opacity: 1;
+  }
+
+  .leave.leave-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
+  }
+}
